--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <div>
-  <img src="images/avatar.jpg" alt="profile image" />
-  <h2>Angga Pratama</h2>
+  <img src="images/avatar.jpg" alt="profile image" id="profile-image" />
+  <h2 id="profile-name">Angga Pratama</h2>
 </div>
 
 <body></body>
