--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<div>
+<div id="header">Header</div>
+<div id="profile-container">
   <img src="images/avatar.jpg" alt="profile image" id="profile-image" />
   <h2 id="profile-name">Angga Pratama</h2>
 </div>
