added style for id footer

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<div>
+<div id="profile-container">
   <img src="images/avatar.jpg" alt="profile image" id="profile-image" />
   <h2 id="profile-name">Angga Pratama</h2>
 </div>
+
+<div id="footer">Footer</div>
 
 <body></body>
 
